# kelly-intelligence

./: .gitignore  LICENSE  README.md
examples/js/: openai-drop-in.js  quickstart.js  streaming.js
examples/python/: openai_drop_in.py  quickstart.py  streaming.py
js/: README.md  index.d.ts  index.js  package.json
python/: README.md  pyproject.toml
python/kelly_intelligence/: __init__.py
