[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kelly-intelligence"
version = "1.0.0"
description = "OpenAI-compatible AI tutor SDK — 162K words, 47 languages, powered by Claude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Lesson of the Day, PBC", email = "nicolette@lotdpbc.com"}]
keywords = ["ai", "tutor", "education", "claude", "openai", "vocabulary", "language-learning", "rag", "multilingual", "llm", "kelly", "anthropic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://api.thedailylesson.com"
Documentation = "https://api.thedailylesson.com"
Repository = "https://github.com/nicoletterankin/kelly-intelligence"
